COZMO-15376 Code Lab vertical: correct glossary close button shift on phones (#6292)
Fix bug where glossary close button on phones was shifting incorrectly when pressed.

--- a/unity/Cozmo/Assets/StreamingAssets/Scratch/css/glossary.css
+++ b/unity/Cozmo/Assets/StreamingAssets/Scratch/css/glossary.css
@@ -214,6 +214,9 @@ body.show-glossary-modal #glossary-modal {
     width: 30px;
     height: 30px;
   }
+  #glossary .close-button:active {
+    background-position: 0 -30px;
+  }
   #glossary #definitions-outer {
     padding: 15px 5px 15px 15px;
   }
